Automatically pick up changes to default foreground color for text on slides (beamer color `normal text')

--- a/beamercolorthemejku.sty
+++ b/beamercolorthemejku.sty
@@ -465,3 +465,17 @@
 
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% 
+%% Tweaks
+%% 
+
+% Pick up changes to default foreground color for text on slides (cf. normal text)
+\apptocmd{\beamer@checkframetitle}{%
+    \usebeamercolor[fg]{normal text}%
+}{}{}
+
+%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
