Automatically pick up changes to default font for text on slides (beamer font `normal text')

--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -566,3 +566,16 @@
 
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% 
+%% Tweaks
+%% 
+
+% Pick up changes to default font for text on slides (cf. normal text)
+\apptocmd{\beamer@checkframetitle}{%
+    \usebeamerfont{normal text}%
+}{}{}
+
+%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
